--- a/app/globals.css
+++ b/app/globals.css
@@ -5,11 +5,15 @@
   --foreground: #171717;
 }
 
+
 @theme inline {
-  --color-background: var(--background);
+ --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  
+  --color-primary: #bfeb58;
+  --color-secondary: #131418;
 }
 
 @media (prefers-color-scheme: dark) {
