--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   
-  --color-primary: #bfeb58;
+  --color-primary: #FFD400;
   --color-secondary: #131418;
 }
 
